# nexus_notes

./: CMakeLists.txt  README.md
include/: globals.hpp  gui.hpp  settings.hpp
src/: globals.cpp  gui.cpp  main.cpp  settings.cpp
